testsuite/tests/properties/invalid_super/common.lkt
from lexer_example import foo_lexer
from test import Example, Number

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example") | Number(@Number))
}
